--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="/css/miEstilo.css">
 </head>
-    <style href="/css/miEstilo.css>
 <body>
     <h1>Aquí iría el título de la página</h1>
     <p> Esto es un párrafo</p>
