--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Aquí iría el título de la página</h1>
     <p> Esto es un párrafo</p>
-    <p>Esto es un segundo párrafo, modifico este párrafo desde una rama</p>
+    <p>Esto es un segundo párrafo, modifico este párrafo desde master y provoco conflicto</p>
     <p>Esto es un tercer párrafo</p>
 </body>
 </html>
